# virt-fwk

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
tools/: Dockerfile  Makefile  init.sh
virt-fwk/: Cargo.toml
virt-fwk/src/: boot_loader.rs  configuration.rs  lib.rs  memory.rs  network.rs  randomization.rs  runtime.rs  serial_port.rs  storage_device.rs
virt-fwk/src/sys/: foundation.rs  mod.rs  queue.rs  virtualization.rs
virt-fwk/src/sys/virtualization/: VZBootLoader.rs  VZBridgedNetworkDeviceAttachment.rs  VZBridgedNetworkInterface.rs  VZDiskImageStorageDeviceAttachment.rs  VZEntropyDeviceConfiguration.rs  VZFileHandleSerialPortAttachment.rs  VZLinuxBootLoader.rs  VZMACAddress.rs  VZMemoryBalloonDeviceConfiguration.rs  VZNATNetworkDeviceAttachment.rs  VZNetworkDevice.rs  VZNetworkDeviceAttachment.rs  VZNetworkDeviceConfiguration.rs  VZSerialPortAttachment.rs  VZSerialPortConfiguration.rs  VZStorageDeviceAttachment.rs  VZStorageDeviceConfiguration.rs  VZVirtioBlockDeviceConfiguration.rs  VZVirtioConsoleDeviceSerialPortConfiguration.rs  VZVirtioEntropyDeviceConfiguration.rs  VZVirtioNetworkDeviceConfiguration.rs  VZVirtioTraditionalMemoryBalloonDeviceConfiguration.rs  VZVirtualMachine.rs  VZVirtualMachineDelegate.rs  mod.rs  vz_bootloader.rs  vz_configuration.rs  vz_memory_configuration.rs  vz_memory_devices.rs  vz_network_attachments.rs  vz_network_configuration.rs  vz_randomization_configurations.rs  vz_runtime.rs  vz_serialports_attachments.rs  vz_serialports_configurations.rs  vz_storage_attachments.rs  vz_storage_configurations.rs
(+7 files in other folders)
