[package]
name = "virt-fwk"
description = "A library that exposes a safe set of API's unlocking the capabilities of Apple's Virtualization.framework in rust."
version = "0.1.0"
edition = "2021"
authors = ["Nick Van Dyck"]
license = "MIT"
repository = "https://github.com/vandycknick/virt-fwk"
readme = "../README.md"

[dependencies]
block2 = "0.2.0-alpha.8"
crossbeam-channel = "0.5.8"
objc2 = "0.3.0-beta.5"
